[package]
name = "radmintools-tui"
version = "0.1.0"
edition = "2024"
authors = ["Bipul Kuri <bipul.k.kuri@gmail.com>"]
description = """
A terminal user interfaces or common admin tools
"""
readme = "README.md"
license = "MIT"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]

[dependencies]
chrono = "0.4.40"
color-eyre = "0.6.3"
copypasta = "0.10.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = "1.0.219"
serde_json = "1.0.140"
tui-input = "0.11.1"
tui-textarea = "0.7.0"

base64 = "0.13"
md5 = "0.7.0"
base64-url = "3.0.0"
html-escape = "0.2.13"
hex = "0.4.3"


[build]
rustflags = ["-C", "target-cpu=native"]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


